# winfidel-rs

./: .gitignore  .yamlfmt.yml  .yamllint.yml  Cargo.toml  Taskfile.yml  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  nix.yml
crates/led/: Cargo.toml
crates/led/src/: channel.rs  lib.rs
crates/mcp3221/: Cargo.toml
crates/mcp3221/src/: lib.rs
firmware/: Cargo.toml
firmware/src/: lib.rs
firmware/src/peripheral/: mod.rs
firmware/src/peripheral/led/: channel.rs  error.rs  mod.rs
src/drivers/led/: channel.rs  mod.rs
tasks/: rust.yml  toml.yml  yaml.yml
