[package]
edition      = "2024"
name         = "winfidel-rs"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "winfidel-rs"
path = "./src/bin/main.rs"

[dependencies]
capnp = { version = "0.25.1", default-features = false, features = ["alloc"] }
defmt = { version = "1.0.1" }
driver-led = { version = "0.1.0", path = "../crates/led" }
driver-mcp3221 = { version = "0.1.0", path = "../crates/mcp3221" }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0" }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
esp-hal = { version = "~1.0", features = ["defmt", "esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
static_cell = { version = "2.1.1" }
thiserror = { version = "2.0.18", default-features = false }

[build-dependencies]
capnpc = "0.25.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio             = { version = "1.50.0", features = ["macros", "rt"] }
